--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "@typescript-eslint/eslint-plugin": "^5.30.6",
     "@typescript-eslint/parser": "^5.30.6",
     "eslint": "^8.19.0",
+    "eslint-import-resolver-typescript": "^3.2.5",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-react": "^7.30.1"
   }
 }
