--- a/package.json
+++ b/package.json
@@ -43,6 +43,10 @@
       "last 1 safari version"
     ]
   },
+  "engines": {
+    "npm": ">=6.0.0",
+    "node": ">=16.0.0 <17"
+  },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.30.6",
     "@typescript-eslint/parser": "^5.30.6",
