--- a/package.json
+++ b/package.json
@@ -30,22 +30,7 @@
     "lint:es:fix": "eslint --ext src/**/*.ts{,x} --fix",
     "lint:ts": "tsc --noEmit",
     "format": "prettier --write src/**/*.ts{,x}",
-    "format:check": "prettier --check src/**/*.ts{,x}",
-    "pre-commit": "lint-staged",
-    "pre-push": "lint-staged"
-  },
-  "husky": {
-    "hooks": {
-      "pre-push": "lint-staged",
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "**/*.(ts|tsx)": [
-      "tsc --noEmit",
-      "eslint --cache --fix",
-      "prettier --write"
-    ]
+    "format:check": "prettier --check src/**/*.ts{,x}"
   },
   "browserslist": {
     "production": [
@@ -84,7 +69,7 @@
     "husky": "^8.0.1",
     "jest-junit": "^14.0.0",
     "lint-staged": "^13.0.3",
-    "prettier": "^2.7.1"
+    "prettier": "^2.7.1",
+    "tsc-files": "^1.1.3"
   }
 }
-
