--- a/package.json
+++ b/package.json
@@ -69,7 +69,6 @@
     "husky": "^8.0.1",
     "jest-junit": "^14.0.0",
     "lint-staged": "^13.0.3",
-    "prettier": "^2.7.1",
-    "tsc-files": "^1.1.3"
+    "prettier": "^2.7.1"
   }
 }
